fix: Fix z-index of actions in batches

--- a/static/grrr/sass/look-and-feel/_batch-detail.sass
+++ b/static/grrr/sass/look-and-feel/_batch-detail.sass
@@ -10,6 +10,7 @@
     background: white
     padding: $m/2
     margin: 0
+    z-index: 10
 .batch-detail__label
   +h(6)
   text-transform: uppercase
